Add primary option to hubmap and sennet ds-graphs to limit results to primary datasets only
